--- a/sonar-scanner.properties
+++ b/sonar-scanner.properties
@@ -1,9 +1,13 @@
 # Required metadata
 sonar.projectKey=PETCLINIC
+sonar.login=admin
+sonar.password=admin
+
 # Source information
 sonar.sources=src/main
 sonar.sourceEncoding=UTF-8
 sonar.language=java
+
 # Tests
 sonar.tests=src/test
 sonar.junit.reportsPath=target/surefire-reports
